--- a/NYCvoters2016/style.css
+++ b/NYCvoters2016/style.css
@@ -5,11 +5,11 @@ body {
   }
 
 h3 {
-    font-family: "Roboto light";
+    font-weight: lighter;
 }
 
 h5 {
-    font-family: "Roboto light"
+    font-weight: lighter;
 }
 
 .dists {
