--- a/NYCvoters2016/style.css
+++ b/NYCvoters2016/style.css
@@ -12,14 +12,33 @@ h5 {
     font-weight: lighter;
 }
 
-.dists {
+/* path.trump {
     stroke: black;
     stroke-width: .25;
+    cursor: default;
+} */
+
+path {
+    stroke: rgb(53, 52, 52);
+    stroke-width: .25;
+    cursor: default;
 }
 
-path.dists:hover {
+path:hover {
     stroke: black;
-    stroke-width: 1.5;
+    stroke-width: 2;
+}
+
+path.trump:hover {
+    fill: rgb(189, 9, 9);
+    stroke: white;
+    stroke-width: 3;
+}
+
+path.clinton:hover {
+    fill: darkblue;
+    stroke: white;
+    stroke-width: 3;
 }
 
 .tooltip {
